# shortener

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/cutter/: forms.py  models.py  service.py  urls.py  views.py
src/cutter/migrations/: 0001_initial.py
src/cutter/templates/cutter/: cutter.html  index.html  links.html  login.html  register.html
src/cutter/templates/registration/: login.html  register.html
src/src/: settings.py  urls.py
