[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["vadim.rudenkov <vadim.rudenkov@muehlemann-popp.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
